swoop fix on mobile?

--- a/src/css/components/section.scss
+++ b/src/css/components/section.scss
@@ -42,7 +42,7 @@
 	}
 
 	&--swoop {
-		--swoop-curve: 15vw;
+		--swoop-curve: 64px;
 		position: relative;
 		margin-top: 5vw;
 		margin-bottom: 5vw;
